<resources>
    <string name="app_name">sqlite</string>
    <string name="student_information_operation_portal">学生信息操作入口</string>
    <string name="teacher_information_operation_portal">教师信息操作入口</string>
    <string name="class_information_operation_portal">班级信息操作入口</string>
    <string name="name">名字</string>
    <string name="phone">电话</string>
    <string name="sex">性别：</string>
    <string name="start_year">入学年份：</string>
    <string name="birthday">生日</string>
    <string name="home_address">家庭地址</string>
    <string name="add_student_info">新增学生信息</string>
    <string name="query_student_info">查询学生信息</string>
    <string name="query_filter_tip">支持学号、性别、模糊（姓名/家庭地址）、出生日期(单独年/月/日，或者综合范围)、入学年份、电话号码等查询条件</string>
    <string name="student_info_op_tip">以下列表长按即可弹窗选择弹窗，进行删除或者修改的操作</string>
    <string name="student_number">学号</string>
    <string name="key_tip">关键字（支持模糊查询）</string>
    <string name="birthday_filter">出生日期</string>
    <string name="start_year_filter_tip">（即入学那年）</string>
    <string name="tip_random">随机生成</string>
    <string name="tip_name">姓名：</string>
    <string name="tip_phone">电话：</string>
    <string name="tip_gender">性别：</string>
    <string name="register_year">入学年份：</string>
    <string name="tip_birthday">出生日期：</string>
    <string name="tip_address">家庭地址：</string>
    <string name="tip_student_number">学号:</string>
    <string name="tip_key">关键字：</string>
    <string name="tip_birthday_limit">范围限制：</string>
</resources>