<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/add_student_info"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/tv_random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/selector_item_bg"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tip_random"
            android:textColor="#5CC835"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tip_name"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxEms="100"
            android:maxLines="1"
            android:labelFor="@id/et_name"
            android:maxLength="20"
            android:importantForAutofill="no"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tip_phone"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="phone"
            android:maxLength="11"
            android:importantForAutofill="no" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tip_gender"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/gender" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register_year"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner_register_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/year" />

    </LinearLayout>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/tip_birthday"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/year" />

        <Spinner
            android:id="@+id/spinner_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/month" />

        <Spinner
            android:id="@+id/spinner_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/day" />

    </LinearLayout>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/tip_address"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_item_bg"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tv_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/selector_item_bg"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/add_student_info"
        android:textColor="#000000"
        android:textSize="18sp" />

</LinearLayout>