<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/query_student_info"
                android:textColor="#000000"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_add"
                android:layout_width="41dp"
                android:layout_height="41dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="5dp"
                android:src="@drawable/ic_person_add" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/query_filter_tip"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tip_student_number"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_student_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxEms="100" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tip_gender"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner_filter_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/gender_filter" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tip_key"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_filter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxEms="100" />

            <Spinner
                android:id="@+id/spinner_filter_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/filter_text" />

        </LinearLayout>


        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/tip_birthday"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner_filter_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/filter_year" />

            <Spinner
                android:id="@+id/spinner_filter_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/filter_month" />

            <Spinner
                android:id="@+id/spinner_filter_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/filter_day" />
        </LinearLayout>

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/tip_birthday_limit"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:text="如果填写了下面日期，则会参照上下都选了的日期进行范围查询"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner_filter_year_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/filter_year" />

            <Spinner
                android:id="@+id/spinner_filter_month_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/filter_month" />

            <Spinner
                android:id="@+id/spinner_filter_day_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/filter_day" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/register_year"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner_filter_start_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/filter_year" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tip_phone"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_filter_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/selector_item_bg"
            android:gravity="center"
            android:id="@+id/tv_query"
            android:padding="10dp"
            android:text="@string/query_student_info"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/student_info_op_tip"
            android:textSize="16sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="500dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </FrameLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
